# MPS_Bose_Hubbard

./: ..gitignore.un~  .dropbox  .gitignore  .gitignore~  CMakeCache.txt  CMakeLists.txt  Makefile  Mycorrelation.txt  NumericGradient_tstep0.001_controlL1000.txt  cmake_install.cmake  condensateData.txt  desktop.ini  test.txt
DataFIles/: Mymatrix.txt  UJparams
DataProcessing/: extractChacheAtDuration.m  extractFinalFidelity.m  extractStatus.m  makeBasisSizePlot.m  makeCompFidelityPlot.m  makeControlPlot.m  makeExpNumberPlot.m  makeFidelityPlot.m  makeIterationPlot.m  makeRampPlot.m  processBestSolutions.m  processCacheData.m  processFidelityData.m  processStatus.m  runExtendedDataProcessing.m  runMsweepProcessing.m  runTsweepProcessing.m
IPOPTtesting/: OCTtest.cpp
TimeEvolutionTesting/: CharacterizeAlgorithms.cpp  TEalgoSFdt0.010000.txt  TestNewTE.cpp  TestTimeEvolution.cpp
WannierFunctions/: Wannier.cpp  testLoading.cpp
include/: BoseHubbardMPO.h  ControlBasis.hpp  ControlBasisFactory.hpp  HamiltonianBH.hpp  InitializeState.hpp  OCBoseHubbard_nlp.hpp  OCdummy_nlp.hpp  OptimalControl.hpp  OptimalControlDummy.hpp  SeedGenerator.hpp  TimeEvolve.hpp  TimeStepperMPO.hpp  TimeStepperTEBD.hpp  TimeStepperTEBDfast.hpp  TimeStepperTEBDnew.hpp  autoMPOstrategy.h  boson.h  correlations.h  correlations.hpp
main/: .BoseHubbard.cpp.un~  .BoseHubbardCondensateFraction.cpp.un~  .BoseHubbardTimeEvolve.cpp.un~  BoseHubbard.cpp  BoseHubbard.cpp~  BoseHubbardCondensateFraction.cpp  BoseHubbardTimeEvolve.cpp  BoseHubbardTimeEvolve.cpp~  ExtendTimeEvolution.cpp  OptimalControlBH.cpp  OptimizeRamp.cpp  RunAdiabaticRamp.cpp  TestNewTE.cpp  TestRamps.cpp  TestTimeEvolution.cpp  testGradients.cpp
plot/: .fig.g.un~  fig.g  fig.g~
src/: BoseHubbardMPO.cpp  (+12 more)
(+19 files in other folders)
